--- a/test/e2e/data/infrastructure-docker/main/cluster-template-topology-no-workers/kustomization.yaml
+++ b/test/e2e/data/infrastructure-docker/main/cluster-template-topology-no-workers/kustomization.yaml
@@ -8,4 +8,8 @@ patches:
     group: cluster.x-k8s.io
     version: v1beta1
     kind: Cluster
-
+- path: remove-topology-workers.yaml
+  target:
+    group: cluster.x-k8s.io
+    version: v1beta1
+    kind: Cluster
